# nixpkgs-merge-bot

./: .gitignore  .mergify.yml  .sops.yaml  LICENSE  LICENSE.md  README.md  default.nix  deploy  deploy-prod  deploy-staging  flake.nix  pyproject.toml  secrets.yaml
.github/workflows/: auto-merge.yaml  update-flake-lock.yml  update-github-ip-whitelist.yml  update-github-whitelist.yml
nix/: disk-config.nix  machine-prod.nix  machine-staging.nix  machine.nix
nix/checks/: flake-module.nix  test.nix
nix/modules/: flake-module.nix  github-webhook-ips.json  nixpkgs-merge-bot.nix  sops.nix
nix/treefmt/: flake-module.nix
nix_merge_bot/: github.py  nix.py
nixpkgs_merge_bot/: __init__.py  custom_logger.py  database.py  git.py  github.py  nix.py  server.py  settings.py
nixpkgs_merge_bot/commands/: merge.py
nixpkgs_merge_bot/github/: GitHubClient.py  Issue.py  PullRequest.py  github_client.py  http_response.py  issue.py  merge_result.py  pull_request.py
nixpkgs_merge_bot/merging_startegies/: maintainer_update.py
nixpkgs_merge_bot/merging_strategies/: backport.py  committer_merge.py  committer_pr.py  maintainer_update.py  merging_strategy.py
nixpkgs_merge_bot/nix/: nix_utils.py
nixpkgs_merge_bot/webhook/: check_run.py  check_suite.py  errors.py  handler.py  http_header.py  http_response.py  issue_comment.py  review_comment.py  secret.py
tests/: conftest.py  test_server.py  test_webhook.py  webhookclient.py
tests/data/: app_installations.json  check_suite_webhook.json  get_check_run_for_commit.json  get_check_suites_for_commit.json  get_team_members.json  (+21 more)
(+1 files in other folders)
