[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nixpkgs-merge-bot"
version = "0.0.1"
license = { text = "MIT" }

[tool.setuptools.packages.find]
exclude = ["nix"]

[project.urls]
Homepage = "https://github.com/Mic92/nixpkgs-merge-bot"

[project.scripts]
nixpkgs-merge-bot = "nixpkgs_merge_bot:main"

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "I", "U", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_mock.*"
ignore_missing_imports = true
